2003-10-09  Chris Blumenberg  <cblu@apple.com>

	Fixed: <rdar://problem/3333897>: should support navigator.plugins.refresh as a way to add a plugin without restarting Safari

        Reviewed by rjw.

        * khtml/ecma/kjs_navigator.cpp:
        (PluginBase::refresh): new
        (PluginsFunc::tryCall): call refresh
        * kwq/KWQKConfigBase.h:
        * kwq/KWQKConfigBase.mm:
        (RefreshPlugins): new
        * kwq/WebCoreViewFactory.h:

=== Safari-109 ===

2003-10-08  David Hyatt  <hyatt@apple.com>

	Fix for 3436723, the shrink-to-fit algorithm for positioned elements did not match
	the algorithm specified in section 10.3.7 of the CSS2.1 specification.  The min-width
	of the element was not being taken into account like it should have been.
	
        Reviewed by mjs

        * khtml/rendering/render_box.cpp:
        (RenderBox::calcAbsoluteHorizontal):

2003-10-08  David Hyatt  <hyatt@apple.com>

	Implement min/max width and min/max height support for replaced elements.
	
        Reviewed by ken

        * khtml/rendering/render_box.cpp:
        (RenderBox::calcReplacedWidth):
        (RenderBox::calcReplacedWidthUsing):
        (RenderBox::calcReplacedHeight):
        (RenderBox::calcReplacedHeightUsing):
        (RenderBox::availableHeight):
        (RenderBox::availableHeightUsing):
        * khtml/rendering/render_box.h:

2003-10-08  Maciej Stachowiak  <mjs@apple.com>

	Fix development build.
	
        * kwq/KWQExceptions.h: Correct assertion args.

2003-10-08  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Ken.

	Start on blocking Cocoa exceptions when calling ObjC from C++ to
	avoid unreproducible crashes when this happens.

        * kwq/KWQExceptions.h: Added. Helper macros for exception blocking.
        * WebCore.pbproj/project.pbxproj: Add new header

	In all these files, block exceptions when calling ObjC from C++,
	or explain why not.
	
        * kwq/KWQAccObjectCache.mm:
        * kwq/KWQApplication.mm:
        * kwq/KWQButton.mm: